package rpg.weapon;

public class Bow extends Weapon {
  public Bow() {
    super("Bow", 8, 30);
  }
}
