package rpg.weapons;

public class Staff extends Weapon {
  public Staff() {
    super("Baton", 12, 40);
  }
}
