package rpg.weapons;

public class Sword extends Weapon {
  public Sword() {
    super("Epee", 10, 50);
  }

}
